# double

./: .gitmodules  CMakeLists.txt  README.md  next.txt  run
benchmarking/: CMakeLists.txt
benchmarking/src/: CMakeLists.txt  benchmarking.cpp
src/: CMakeLists.txt  main  operation.cc  operation.h  run  run.cc  univariate_function.cc  univariate_function.h
src/operation/: CMakeLists.txt  operation.cc  operation.h
src/univariate/: CMakeLists.txt  fast_container.cc  fast_container.h  function.cc  function.h  univariate_container.cc  univariate_container.h  univariate_function.cc  univariate_function.h
